# Mahjong-Calculator

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  plan.md
.claude/skills/codex-reviewer/: SKILL.md
.claude/skills/issue-pr-auto/: INSTRUCTIONS.md  SKILL.md
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: build-check.yml  claude-auto-implement.yml  issue-plan.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt  score_engine.py
backend/tests/: test_min_cases.py
frontend/: .gitignore  App.tsx  app.json  eslint.config.mjs  jest.config.cjs  package-lock.json  package.json  tsconfig.json
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: HistoryItem.tsx  TileButton.tsx  TilePickerModal.tsx
frontend/src/screens/: FinalResultScreen.tsx  HistoryScreen.tsx  ManualInputScreen.tsx  RecordWinScreen.tsx  ScoreboardScreen.tsx  StartGameScreen.tsx  TileRecognitionScreen.tsx
frontend/src/store/: gameStore.ts
frontend/src/types/: mahjong.ts
frontend/src/utils/: scoreCalculator.test.ts  scoreCalculator.ts
plans/: issue-7.md
