[project]
name = "mahjong-calculator-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "mahjong==1.4.0",
    "openai>=1.0.0",
    "pillow==12.1.0",
    "python-multipart==0.0.22",
    "pydantic==2.12.5",
    "annotated-types==0.7.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
